--- a/app/templates/bonus.html
+++ b/app/templates/bonus.html
@@ -1,16 +1,15 @@
 <html>
 
 <head>
-	<title>Username</title>
+	<title></title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='petdraft.css') }}">
 </head>
 
 	<body>
 
-		<h1>Username</h1>
+		<h1>"hello world"</h1>
 		<h2></h2> 
 		<h3><h3/>
-	
 		
 
 	</body> 
